--- a/w2/ForumDemo/appsettings.json
+++ b/w2/ForumDemo/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
+  "DBInfo": {
+    "Name": "MySqlConnection",
+    "ConnectionString": "server=localhost;userid=root;password=root;port=3306;database=forum;SslMode=None"
+  },
   "AllowedHosts": "*"
 }
